new proj/src/objects/GE_ES_Sub_Region__c.object
<CustomObject>
    <fields>
        <fullName>GE_ES_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_OP_2010_1Q__c</fullName>
        <description>Operating Plan for Q1 2010</description>
        <label>OP 2010 1Q</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_HQ_OP_2010_2Q__c</fullName>
        <description>Operating Plan for Q2 2010</description>
        <label>OP 2010 2Q</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_HQ_OP_2010_3Q__c</fullName>
        <description>Operating Plan for Q3 2010</description>
        <label>OP 2010 3Q</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_HQ_P_L__c</fullName>
        <label>P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_Sales_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Region</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>GE_ES_Sales_Region__c.GE_ES_P_L__c</field>
                <operation>equals</operation>
                <value>Sub Region: P&amp;L</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>GE_ES_Sales_Region__c</referenceTo>
        <relationshipLabel>Sub Regions</relationshipLabel>
        <relationshipName>Sub_Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sub Region</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>GE_ES_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Sub Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>